# SearchGram

./: README.md  config.example.toml  pyproject.toml
searchgram/: __init__.py  bot.py  client.py  config.py  engine.py  init_client.py  meili.py  mongo.py  zinc.py
