[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchgram"
version = "1.3.1"
description = "A Telegram bot that improves search experience for Chinese, Japanese, and Korean (CJK) languages with message backup functionality"
readme = "README.md"
authors = [
    {name = "Benny", email = "benny.think@gmail.com"}
]
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
keywords = ["telegram", "bot", "search", "cjk", "meilisearch"]

dependencies = [
    "pyrogram==2.0.106",
    "tgcrypto==1.2.5",
    "fakeredis==2.31.3",
    "tqdm==4.67.1",
    "meilisearch==0.37.0",
    "coloredlogs==15.0.1",
    "pymongo==4.15.2",
    "zhconv==1.4.3",
    "zincsearch-sdk==0.3.3",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/BennyThink/SearchGram"
Repository = "https://github.com/BennyThink/SearchGram"
Issues = "https://github.com/BennyThink/SearchGram/issues"

[project.scripts]
searchgram-bot = "searchgram.bot:main"
searchgram-client = "searchgram.client:main"

[tool.setuptools]
packages = ["searchgram", "searchgram.tests", "searchgram.migrations"]

[tool.setuptools.package-data]
searchgram = ["session/readme.txt"]
